# ROS2_Learning_Programs

./: .gitignore  README.md
first_test/rosfish_stu/rosfish_stu/: CMakeLists.txt  cpp_args.cpp  ros2_node_cpp  ros2_node_python.py
first_test/编译/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learn_gcc.cpp
node/node_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
node/node_ws/src/demo_cpp_pkg/src/: demo_cpp_node.cpp  demo_person_node.cpp  learn_auto.cpp  learn_functional.cpp  learn_lambda.cpp  learn_share_ptr.cpp  learn_thread.cpp
node/node_ws/src/demo_python_pkg/: package.xml  setup.py
node/node_ws/src/demo_python_pkg/demo_python_pkg/: demo_node_son.py  demo_person_node.py  demo_person_son_node.py  demo_python_node.py  learn_thread.py
service_params/face_service_ws/src/demo_python_service/: package.xml  setup.py
service_params/face_service_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_service_node.py  learn_face_detecte.py
service_params/face_service_ws/src/face_interfaces/: CMakeLists.txt  package.xml
service_params/patrol_ws/src/patrol_cpp_service/: CMakeLists.txt  package.xml
service_params/patrol_ws/src/user_interfaces/: CMakeLists.txt  package.xml
tools/tf_ws/src/tf_cpp/: CMakeLists.txt  package.xml
tools/tf_ws/src/tf_cpp/src/: dynamic_tf_broadcaster.cpp  (+2 more)
tools/tf_ws/src/tf_python/: package.xml  setup.cfg  setup.py
topic/topic_ws/novels/: novel1.txt
topic/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
topic/topic_ws/src/demo_python_topic/: package.xml  setup.py
(+13 files in other folders)
